test: add unit/integration tests

--- a/packages/pieces/community/decidim/project.json
+++ b/packages/pieces/community/decidim/project.json
@@ -60,6 +60,15 @@
       "outputs": [
         "{options.outputFile}"
       ]
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
+      "options": {
+        "jestConfig": "packages/pieces/community/decidim/jest.config.ts"
+      }
     }
   }
 }
