--- a/.github/workflows/build-decidim-tarballs.yaml
+++ b/.github/workflows/build-decidim-tarballs.yaml
@@ -33,6 +33,9 @@ jobs:
       - name: Install deps
         run: npm ci
 
+      - name: Run decidim tests
+        run: npx nx test pieces-decidim
+
       - name: Read decidim version (jq)
         id: ver
         run: |
