--- a/.github/workflows/build-decidim-tarballs.yaml
+++ b/.github/workflows/build-decidim-tarballs.yaml
@@ -28,10 +28,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
 
       - name: Install deps
-        run: npm ci
+        run: bun install
 
       - name: Run decidim tests
         run: npx nx test pieces-decidim
