--- a/.github/workflows/publish-decidim.yml
+++ b/.github/workflows/publish-decidim.yml
@@ -1,4 +1,4 @@
-name: Publish i18n-store
+name: Publish decidim
 
 on:
   workflow_dispatch:
@@ -7,14 +7,14 @@ on:
       - packages/octree
 
 concurrency:
-  group: publish-i18n-store
+  group: publish-decidim
   cancel-in-progress: false
 
 env:
   NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
 
 jobs:
-  Publish-i18n-store:
+  Publish-decidim:
     if: github.repository == 'activepieces/activepieces'
     runs-on: ubuntu-latest
     steps:
@@ -44,17 +44,17 @@ jobs:
         run: bun install
 
       - name: Run tests
-        run: npx nx test pieces-i18n-store
+        run: npx nx test pieces-decidim
 
       - name: Build package
-        run: npx nx run-many --target=build --projects=pieces-i18n-store
+        run: npx nx run-many --target=build --projects=pieces-decidim
 
       - name: Copy project .npmrc to user level
         run: cp .npmrc $HOME/.npmrc
 
       - name: Publish to npm
         run: |
-          VERSION=$(cat packages/pieces/community/i18n-store/package.json | jq -r .version)
-          npx ts-node -r tsconfig-paths/register -P packages/engine/tsconfig.lib.json tools/scripts/utils/publish-nx-project.ts packages/pieces/community/i18n-store
+          VERSION=$(cat packages/pieces/community/decidim/package.json | jq -r .version)
+          npx ts-node -r tsconfig-paths/register -P packages/engine/tsconfig.lib.json tools/scripts/utils/publish-nx-project.ts packages/pieces/community/decidim
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
