--- a/packages/pieces/community/decidim/package.json
+++ b/packages/pieces/community/decidim/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@activepieces/piece-decidim",
+  "name": "@octree/piece-decidim",
   "version": "0.0.1",
   "type": "commonjs",
   "main": "./src/index.js",
