ci: run publication only on octree fork

--- a/.github/workflows/publish-i18n-store.yml
+++ b/.github/workflows/publish-i18n-store.yml
@@ -15,8 +15,11 @@ env:
 
 jobs:
   Publish-i18n-store:
-    if: github.repository == 'activepieces/activepieces'
+    if: github.repository == 'octree-gva/activepieces' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -54,6 +57,3 @@ jobs:
         run: |
           VERSION=$(cat packages/pieces/community/i18n-store/package.json | jq -r .version)
           npx ts-node -r tsconfig-paths/register -P packages/engine/tsconfig.lib.json tools/scripts/utils/publish-nx-project.ts packages/pieces/community/i18n-store
-        permissions:
-          id-token: write
-          contents: read
