--- a/.github/workflows/publish-decidim.yml
+++ b/.github/workflows/publish-decidim.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   Publish-decidim:
-    if: github.repository == 'activepieces/activepieces'
+    if: github.repository == 'octree-gva/activepieces' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
