--- a/.github/workflows/publish-i18n-store.yml
+++ b/.github/workflows/publish-i18n-store.yml
@@ -39,6 +39,9 @@ jobs:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Upgrade npm for trusted publishing
+        run: npm install -g npm@latest
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
