--- a/packages/pieces/community/i18n-store/package.json
+++ b/packages/pieces/community/i18n-store/package.json
@@ -1,4 +1,8 @@
 {
   "name": "@octree/piece-i18n-store",
-  "version": "0.0.2"
+  "version": "0.0.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/octree-gva/activepieces"
+  }
 }
