--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "jsonlint-mod": "1.7.6",
     "jsonrepair": "3.2.0",
     "jsonwebtoken": "9.0.1",
+    "superjson": "2.2.1",
     "jszip": "3.10.1",
     "jwks-rsa": "3.1.0",
     "jwt-decode": "4.0.0",
