--- a/packages/pieces/community/state-store/project.json
+++ b/packages/pieces/community/state-store/project.json
@@ -41,6 +41,25 @@
       "dependsOn": [
         "^build"
       ]
+    },
+    "pretest": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "packages/pieces/community/state-store",
+        "command": "bun install --no-save --silent"
+      }
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
+      "options": {
+        "jestConfig": "packages/pieces/community/state-store/jest.config.ts"
+      },
+      "dependsOn": [
+        "pretest"
+      ]
     }
   },
   "tags": []
